--- a/requirements.txt
+++ b/requirements.txt
@@ -116,7 +116,7 @@ langchain-community==0.0.38
 langchain-core==0.1.52
 langchain-openai==0.1.7
 langchain-text-splitters==0.0.2
-langsmith==0.1.100
+#langsmith==0.1.100
 lxml==5.3.0
 Mako==1.3.5
 Markdown==3.7
