--- a/requirements.txt
+++ b/requirements.txt
@@ -1,277 +1,10 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-alembic==1.13.2
-altair==5.4.0
-annotated-types==0.7.0
-anyio==4.4.0
-appdirs==1.4.4
-asgiref==3.8.1
-asttokens==2.4.1
-attrs==24.2.0
-backoff==2.2.1
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
-black==24.8.0
-blinker==1.8.2
-boto3==1.35.2
-botocore==1.35.2
-Brotli==1.1.0
-build==1.2.1
-cachetools==5.5.0
-certifi==2024.7.4
-cffi==1.17.0
-chardet==3.0.4
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-chromadb==0.4.24
-clarifai==10.7.0
-clarifai-grpc==10.7.3
-click==8.1.7
-cmdstanpy==1.2.4
-cohere==5.8.1
-colorama==0.4.6
-coloredlogs==15.0.1
-contextlib2==21.6.0
-contourpy==1.2.1
-crewai==0.28.8
-crewai-tools==0.1.7
-cryptography==43.0.0
-curl_cffi==0.7.1
-cycler==0.12.1
-dataclasses-json==0.6.7
-decorator==5.1.1
-Deprecated==1.2.14
-deprecation==2.1.0
-distro==1.9.0
-docstring-parser==0.15
-duckduckgo_search==5.3.0
-embedchain==0.1.113
-entrypoints==0.4
-executing==2.0.1
-Faker==28.1.0
-fastapi==0.112.1
-fastavro==1.9.5
-favicon==0.7.0
-filelock==3.15.4
-flatbuffers==24.3.25
-fonttools==4.53.1
-frozendict==2.4.4
-frozenlist==1.4.1
-fsspec==2024.6.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.19.1
-google-auth==2.34.0
-google-cloud-aiplatform==1.63.0
-google-cloud-bigquery==3.25.0
-google-cloud-core==2.4.1
-google-cloud-resource-manager==1.12.5
-google-cloud-storage==2.18.2
-google-crc32c==1.5.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.63.2
-gptcache==0.1.44
-greenlet==3.0.3
-grpc-google-iam-v1==0.13.1
-grpcio==1.64.3
-grpcio-status==1.62.3
-#h11==0.14.0
-h2==3.2.0
-holidays==0.55
-hpack==3.0.0
-hstspreload==2024.8.1
-htbuilder==0.6.2
-html5lib==1.1
-httptools==0.6.1
-httpx==0.23.0
-httpx-sse==0.4.0
-huggingface-hub==0.24.6
-humanfriendly==10.0
-hyperframe==5.2.0
-idna==2.10
-importlib_metadata==8.0.0
-importlib_resources==6.4.3
-iniconfig==2.0.0
-inquirerpy==0.3.4
-instructor==0.5.2
-ipython==8.26.0
-jedi==0.19.1
-Jinja2==3.1.4
-jiter==0.5.0
-jmespath==1.0.1
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.5
-kubernetes==30.1.0
-lancedb==0.5.7
-langchain==0.1.20
-langchain-cohere==0.1.5
-langchain-community==0.0.38
-langchain-core==0.1.52
-langchain-openai==0.1.7
-langchain-text-splitters==0.0.2
-#langsmith==0.1.100
-lxml==5.3.0
-Mako==1.3.5
-Markdown==3.7
-markdown-it-py==3.0.0
-markdownlit==0.0.7
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mmh3==4.1.0
-monotonic==1.6
-more-itertools==10.4.0
-mpmath==1.3.0
-multidict==6.0.5
-multitasking==0.0.11
-mutagen==1.47.0
-mypy-extensions==1.0.0
-narwhals==1.5.0
-nodeenv==1.9.1
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.19.0
-openai==1.42.0
-opentelemetry-api==1.26.0
-opentelemetry-exporter-otlp-proto-common==1.26.0
-opentelemetry-exporter-otlp-proto-grpc==1.26.0
-opentelemetry-exporter-otlp-proto-http==1.26.0
-opentelemetry-instrumentation==0.47b0
-opentelemetry-instrumentation-asgi==0.47b0
-opentelemetry-instrumentation-fastapi==0.47b0
-opentelemetry-proto==1.26.0
-opentelemetry-sdk==1.26.0
-opentelemetry-semantic-conventions==0.47b0
-opentelemetry-util-http==0.47b0
-orjson==3.10.7
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==23.2
-pandas==2.2.2
-parameterized==0.9.0
-parso==0.8.4
-pathspec==0.12.1
-peewee==3.17.6
-pfzy==0.3.4
-pillow==10.4.0
-platformdirs==4.2.2
-plotly==5.24.0
-pluggy==1.5.0
-posthog==3.5.0
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-prophet==1.1.5
-proto-plus==1.24.0
-protobuf==4.25.4
-pulsar-client==3.5.0
-pure_eval==0.2.3
-py==1.11.0
-pyarrow==17.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-pycryptodomex==3.20.0
-pydantic==2.8.2
-pydantic_core==2.20.1
-pydeck==0.9.1
-PyGithub==1.59.1
-Pygments==2.18.0
-PyJWT==2.9.0
-pylance==0.9.18
-pymdown-extensions==10.9
-PyNaCl==1.5.0
-pyparsing==3.1.2
-pypdf==4.3.1
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-pyreadline3==3.4.1
-pyright==1.1.376
-pysbd==0.3.4
-PySocks==1.7.1
-pytest==8.3.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-python-rapidjson==1.20
-pytube==15.0.0
-pytz==2024.1
-PyYAML==6.0.2
-ratelimiter==1.2.0.post0
-referencing==0.35.1
-regex==2023.12.25
-requests==2.32.3
-requests-oauthlib==2.0.0
-retry==0.9.2
-rfc3986==1.5.0
-rich==13.7.1
-rpds-py==0.20.0
-rsa==4.9
-s3transfer==0.10.2
-schema==0.7.5
-scikit-learn==1.5.1
-scipy==1.14.0
-seaborn==0.13.2
-selenium==4.23.1
-semver==3.0.2
-shapely==2.0.6
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-SQLAlchemy==2.0.32
-st-annotated-text==4.0.1
-st-theme==1.2.3
-stack-data==0.6.3
-stanio==0.5.1
-starlette==0.38.2
-streamlit==1.37.1
-streamlit-camera-input-live==0.2.0
-streamlit-card==1.0.2
-streamlit-embedcode==0.1.2
-streamlit-extras==0.4.7
-streamlit-faker==0.0.3
-streamlit-image-coordinates==0.1.9
-streamlit-keyup==0.2.4
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==2.5.5
-sympy==1.13.2
-tabulate==0.9.0
-tenacity==8.5.0
-threadpoolctl==3.5.0
-tiktoken==0.7.0
-tokenizers==0.20.0
-toml==0.10.2
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
-trio==0.26.2
-trio-websocket==0.11.1
-tritonclient==2.48.0
-typer==0.9.4
-types-requests==2.32.0.20240712
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-uvicorn==0.30.6
-validators==0.33.0
-watchdog==4.0.2
-watchfiles==0.23.0
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==13.0
-wrapt==1.16.0
-wsproto==1.2.0
-yarl==1.9.4
 yfinance==0.2.41
-youtube-transcript-api==0.6.2
-yt-dlp==2023.12.30
-zipp==3.20.0
+crewai==0.28.8
+langchain==0.1.20
+langchain-openai==0.1.7
+langchain-community==0.0.38
+duckduckgo-search==5.3.0
+pysqlite3-binary==0.5.3
+prophet==1.1.5
+httpx==0.27.0
+streamlit-extras
